--- a/lesson_01/my-react/src/index.css
+++ b/lesson_01/my-react/src/index.css
@@ -1,13 +1,27 @@
 body {
-  margin: 0;
+  margin: 10;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.lesson-container{
+      /* делаем flex контейнер */
+  display: flex;
+  /* меняем направление главной оси на вертикальное */
+  flex-direction: column;
+  /* выравниваем по центру */
+  align-items: center;
+  margin: auto;
+
+}
+.lesson-container > p{
+  text-align: center;
 }
